added awb bills functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
                 formHeading.textContent = 'Upload Invoice';
             } else if (serviceSelect.value === 'Receipts') {
                 formHeading.textContent = 'Upload Receipt';
-            } else if (serviceSelect.value === 'Other Documents') {
-                formHeading.textContent = 'Other Documents';
+            } else if (serviceSelect.value === 'AWB') {
+                formHeading.textContent = 'AWB';
             }
         }
 
@@ -60,7 +60,7 @@
                     <select id="service-select" name="service-select">
                         <option value="Invoices">Invoices</option>
                         <option value="Receipts">Receipts</option>
-                        <option value="Other Documents">Other Documents</option>
+                        <option value="AWB">AWB</option>
                     </select>
                 </fieldset>
                 <h2 id="form-heading">Upload Invoice</h2>
